<resources>
    <string name="app_name">TrueFalseAppV2</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="cheat_button">Cheat!</string>
    <string name="prev_button">Prev.</string>
    <string name="next_button">Next</string>

    <!-- questions -->
    <string name="question_1">Square root of 49 is 6</string> <!--false -->
    <string name="question_2">7x8=54</string> <!--false -->
    <string name="question_3">2+2*4=16</string> <!--false -->
    <string name="question_4">14*14=196</string> <!--true -->
    <string name="question_5">15*15=225</string> <!--true -->
    <string name="question_6">19–8=9</string><!--false -->
    <string name="question_7">20*20=400</string><!--true -->
    <string name="question_8">21*22=462</string><!--true -->
    <string name="question_9">15 is a prime number</string><!--false -->
    <string name="question_10">17 is a prime number</string><!--true -->

    <!-- toast texts -->
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
<!-- CheatingActivity class-->
    <string name="cheat_text">Do you really want to Cheat?</string>
    <string name="cheat">yes,Cheat</string>
    <string name="refuse_cheat">No, I don\'t</string>
    <string name="judgment_toast">Cheating is not good!!!</string>
</resources>