<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="10dp"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Question will be here"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ripple_button"
            android:textColor="#FFFFFF"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"  />



        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button"
            android:background="@drawable/ripple_button"
            android:textColor="#FFFFFF"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/prev_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_color"
                android:drawableStart="@drawable/outline_arrow_back_ios_24"

                android:paddingStart="10dp"
                android:paddingEnd="20dp"
                android:gravity="center"
                android:text="@string/prev_button"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/cheat_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cheat_button"
                android:layout_marginEnd="10dp"
                android:background="@drawable/cheat_button"
                android:textColor="#FFFFFF"/>


            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_button"
                android:background="@drawable/button_color"
                android:textColor="#FFFFFF"
                android:drawableEnd="@drawable/outline_arrow_forward_ios_24"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="4dp"/>




        </LinearLayout>







</LinearLayout>