<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="20dp"
    android:background="@color/backgroundColor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/cheat_text"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/answer_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Answer is: ???"
        android:textSize="24sp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp">

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp">


        <Button
            android:id="@+id/cheat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/cheat_button"
            android:text="@string/cheat"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/refuse_cheat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refuse_cheat"
            android:background="@drawable/button_color"
            android:textColor="#FFFFFF"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>